--- a/js/index.html
+++ b/js/index.html
@@ -9,6 +9,10 @@
 
 
 
-<script src="./problem-solving/guess-game.js"></script>    
+<!-- <script src="./problem-solving/guess-game.js"></script>     -->
+<script>
+    var arr = ["bhavisya", "alpna", "Arpita"]
+    console.log(arr)
+</script>
 </body>
 </html>
