--- a/js/index.html
+++ b/js/index.html
@@ -10,9 +10,6 @@
 
 
 <!-- <script src="./problem-solving/guess-game.js"></script>     -->
-<script>
-    var arr = ["bhavisya", "alpna", "Arpita"]
-    console.log(arr)
-</script>
+<script src="./callbacks.js"></script>
 </body>
 </html>
