--- a/js/dom/form.html
+++ b/js/dom/form.html
@@ -13,8 +13,14 @@
         <input type="text" id="username"><br>
         <span id="username-err"></span><br>
 
+        <label>Email</label>
+        <input type="text" id="email"><br>
+        <span id="email-err"></span><br>
 
-        <button type="submit">Save</button>
+        <input type="checkbox" id="check">I agree to terms and conditions<br>
+
+
+        <button type="submit" disabled="disabled" id="btn-submit">Save</button>
 
     </form>
     
